--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-color: #9ae7d9;
+    overflow-x: hidden
+}
+
+h5 {
+    margin:12px;
+    padding:0;
 }
